[project]
name = "sys-dashboard"
version = "1.0.0"
description = "Terminal system dashboard with sparklines and live metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.2.2",
    "rich>=14.3.2",
]

[project.scripts]
stats = "dashboard:main"

[tool.uv]
package = true
